tests/templates/testcases/network_policy/network-policy.yml
# namespace network-test
apiVersion: v1
kind: Namespace
metadata:
  name: network-test

---
# server pod with policy
apiVersion: v1
kind: Pod
metadata:
  name: policy-spod
  namespace: network-test
  labels:
    app: policy-spod
spec:
  containers:
  - name: nginx
    image: nginx

---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: access-policy
  namespace: network-test
spec:
  podSelector:
    matchLabels:
      app: policy-spod
  ingress:
  - from:
    - podSelector:
        matchLabels:
          access: "true"

---
apiVersion: v1
kind: Service
metadata:
  name: policy-svc
  namespace: network-test
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: policy-spod

---
# server pod without policy
apiVersion: v1
kind: Pod
metadata:
  name: non-policy-spod
  namespace: network-test
  labels:
    app: non-policy-spod
spec:
  affinity:
    podAffinity:
      requiredDuringSchedulingIgnoredDuringExecution:
      - labelSelector:
          matchLabels:
            app: policy-spod
        topologyKey: kubernetes.io/hostname
  containers:
  - name: nginx
    image: nginx

---
apiVersion: v1
kind: Service
metadata:
  name: non-policy-svc
  namespace: network-test
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: non-policy-spod

---
# client pod without policy label
# at least 2 worker node needed for test network connection across nodes
apiVersion: v1
kind: Pod
metadata:
  name: non-policy-cli
  namespace: network-test
  labels:
    app: non-policy-cli
spec:
  affinity:
    podAntiAffinity:
      requiredDuringSchedulingIgnoredDuringExecution:
      - labelSelector:
          matchExpressions:
          - key: "app"
            operator: In
            values:
            - non-policy-spod
            - policy-spod
        topologyKey: kubernetes.io/hostname
  restartPolicy: Never
  initContainers:
  - name: waiting
    image: busybox
    command: ["sh", "-c", "for i in `seq 1 120`; do nslookup -type=A policy-svc && nslookup -type=A non-policy-svc && wget -T 1 non-policy-svc && exit 0; sleep 1; done"]
  containers:
  - name: policy
    image: busybox
    command: ["sh", "-c", "wget -T 1 policy-svc"]
  - name: non-policy
    image: busybox
    command: ["sh", "-c", "wget -T 1 non-policy-svc"]
---

# client pod with policy label
# at least 2 worker node needed for test network connection across nodes
apiVersion: v1
kind: Pod
metadata:
  name: policy-cli
  namespace: network-test
  labels:
    app: policy-cli
    access: "true"
spec:
  affinity:
    podAntiAffinity:
      requiredDuringSchedulingIgnoredDuringExecution:
      - labelSelector:
          matchExpressions:
          - key: "app"
            operator: In
            values:
            - non-policy-spod
            - policy-spod
        topologyKey: kubernetes.io/hostname
  restartPolicy: Never
  initContainers:
  - name: waiting
    image: busybox
    command: ["sh", "-c", "for i in `seq 1 120`; do nslookup -type=A policy-svc && nslookup -type=A non-policy-svc && wget -T 1 non-policy-svc && exit 0; sleep 1; done"]
  containers:
  - name: policy
    image: busybox
    command: ["sh", "-c", "wget -T 1 policy-svc"]
  - name: non-policy
    image: busybox
    command: ["sh", "-c", "wget -T 1 non-policy-svc"]
